--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----------- CONFIGURABLE START -----------
 title:            "Pat,一只胖胖"
 description:      ""
-url:              https://pppaty.github.io/ # 域名
-signoff:          "PPPatY" # Your name
+url:              https://764424567.github.io/ # 域名
+signoff:          "764424567" # Your name
 facebook_appid:   #764424567
 google_analytics: UA-101222464-1
 share:            true 
